--- a/selab/research/index.html
+++ b/selab/research/index.html
@@ -24,8 +24,8 @@
 
 	<!-- Mirrored from selab.hanyang.ac.kr/research/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Nov 2019 07:38:25 GMT -->
 	<body>
-		<header role="banner">
-			<div class="container navigation">
+		<header role="banner" class="header">
+			<div class="container">
 				<nav>
 					<div id="logo" class="pull-left">
 						<a href="../index.html"><img src="../common/images/selab_logo_S.png" alt="logo"/></a>
@@ -60,29 +60,11 @@
 				<div id="font"></div>
 				<div id="background"></div>
 			</div>
-			<div class="main-container">
+			<div class="main-container container">
 
 				<div id="nav">
 					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-  				<div class="nav-list">
-  					<a href="../notice/index.html" >NOTICE</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../members/index.html" >MEMBERS</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../research/index.html" >RESEARCH</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../publications/index.html" >PUBLICATIONS</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../courses/index.html" >COURSES</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../gallery/index.html" >GALLERY</a>
-  				</div>
-					<div class="nav-list-bottom">
+					<div class="nav-list-left">
 						<a id="setting" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
 
 						<div role="login">
@@ -90,6 +72,26 @@
 						</div>
 
 						<a id="contact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
+					</div>
+					<div class="nav-list-right">
+	  				<div class="nav-list">
+	  					<a href="../notice/index.html" >NOTICE</a>
+	  				</div>
+	  				<div class="nav-list">
+	  					<a href="../members/index.html" >MEMBERS</a>
+	  				</div>
+	  				<div class="nav-list">
+	  					<a href="../research/index.html" >RESEARCH</a>
+	  				</div>
+	  				<div class="nav-list">
+	  					<a href="../publications/index.html" >PUBLICATIONS</a>
+	  				</div>
+	  				<div class="nav-list">
+	  					<a href="../courses/index.html" >COURSES</a>
+	  				</div>
+	  				<div class="nav-list">
+	  					<a href="../gallery/index.html" >GALLERY</a>
+	  				</div>
 					</div>
 				</div>
 				<div class="contents">
