--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -13,12 +13,12 @@
 		<link rel="shortcut icon" href="../common/images/SelabFavicon.png" type="image/png">
 		<link rel="stylesheet" href="styles/contact.css" type="text/css">
 
-		<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
-		<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
-		<script type="text/javascript" src="common/scripts/buffered-keyup.js"></script>
-		<script type="text/javascript" src="common/scripts/common.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-ui.js"></script>
+		<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
+		<script type="text/javascript" src="../common/scripts/common.js"></script>
 		<script type="text/javascript" src="scripts/js"></script>
-		<script type="text/javascript" src="scripts/index_files/contact.js"></script>
+		<script type="text/javascript" src="scripts/contact.js"></script>
 	</head>
 
 	<body>
