--- a/selab/gallery/index.html
+++ b/selab/gallery/index.html
@@ -52,7 +52,7 @@
 			</div>
 		</header>
 
-		<main role="main" style="height: 690px;">
+		<main role="main">
 			<div id="settingtab">
 				<p>Navigation</p>
 				<input type="radio" name="nav" value="top" checked="checked" /> Top
