--- a/selab/members/index.html
+++ b/selab/members/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</header>
 
-		<main role="main" style="height: 690px;">
+		<main role="main">
 			<div id="settingtab">
 				<p>Navigation</p>
 				<input type="radio" name="nav" value="top" checked="checked" /> Top
