--- a/selab/login/index4e7d.html
+++ b/selab/login/index4e7d.html
@@ -15,7 +15,7 @@
 			<h1>LOGIN</h1>
 		</header>
 		<content>
-			<form method="post" action="http://localhost/login.php">
+			<form method="post" action="login.php">
 
 				<input id="idform" class="textfield" type="text" name="id" placeholder= "Username"/>
 				<div class="login_icon" id="usericon"></div>
