--- a/selab/index.html
+++ b/selab/index.html
@@ -67,9 +67,9 @@
 					<select id="backselect" name="selectBackground" onchange="backupdate();">
 						<option value="1"> Theme1 </option>
 						<option value="2"> Theme2</option>
-						<option value="3" data-style="background-image: url(../home/styles/theme3.css)"> Theme3 </option>
-						<option value="4" data-style="background-image: url(../home/styles/theme4.css)"> Theme4 </option> 
-						<option value="5" data-style="background-image: url(../home/styles/theme5.css)"> Theme5 </option>
+						<option value="3"> Theme3 </option>
+						<option value="4"> Theme4 </option> 
+						<option value="5"> Theme5 </option>
 					</select>
 				</div>
 			</div>
