--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -28,13 +28,10 @@
 					<div id="logo" class="pull-left">
 						<a href="../index.html"><img src="../common/images/selab_logo_S.png" alt="logo"/></a>
 					</div>
-
 					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
-
 					<div role="login" class="pull-right">
 						<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
 					</div>
-
 					<a id="contact" href="../contact/index.html" class='pull-right'> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 				</nav>
 				<div id="menu">
@@ -50,49 +47,105 @@
 			</div>
 		</header>
 
-		<main role="main" style="height: 690px;">
-			<div id="settingtab">
-				<p>Navigation</p>
-				<input type="radio" name="nav" value="top" checked="checked" /> Top
-				<input type="radio" name="nav" value="left" /> Left
-				<input type="radio" name="nav" value="right" /> Right
-				<div id="font"></div>
-				<div id="background"></div>
-			</div>
-			<div class="main-container container">
-
-				<div id="nav">
-					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-					<div class="nav-list-left">
-						<a id="setting" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
-
-						<div role="login">
-							<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
+		<div id="settingtab">
+			<div id="sample">
+				<div id="samplePage">
+					<div id="SampleH">
+						<div id="SampleH1">
+							<p>[lab];</p>
 						</div>
-
-						<a id="contact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
+						<div id="SampleH2">
+							<p>notice members research ...</p>
+						</div>
 					</div>
-					<div class="nav-list-right">
-	  				<div class="nav-list">
-	  					<a href="../notice/index.html" >NOTICE</a>
-	  				</div>
-	  				<div class="nav-list">
-	  					<a href="../members/index.html" >MEMBERS</a>
-	  				</div>
-	  				<div class="nav-list">
-	  					<a href="../research/index.html" >RESEARCH</a>
-	  				</div>
-	  				<div class="nav-list">
-	  					<a href="../publications/index.html" >PUBLICATIONS</a>
-	  				</div>
-	  				<div class="nav-list">
-	  					<a href="../courses/index.html" >COURSES</a>
-	  				</div>
-	  				<div class="nav-list">
-	  					<a href="../gallery/index.html" >GALLERY</a>
-	  				</div>
+					<div id="sampleC">
+						<h1>sample</h1>
+						<p>This is sample to help your costomizing. I hope you satisfied whith our wepsite.</p>
 					</div>
 				</div>
+			</div>
+
+			<div id="option">
+				<div id="font">
+					<p>Navigation</p>
+					<input type="radio" name="nav" value="top" checked="checked" /> Top
+					<input type="radio" name="nav" value="left" /> Left
+					<input type="radio" name="nav" value="right" /> Right
+					<p>Font</p>
+					<select id="fontselect" name="selectFontFamily" onchange="fontupdate(1)">
+						<option style="font-family:Serif" value="serif"> Serif </option>
+						<option style="font-family:Tahoma" value="Tahoma"> Tahoma </option>
+						<option style="font-family:Arial" value="Arial"> Arial </option>
+						<option style="font-family:Monospace" value="Monospace">Monospace</option>
+						<option style="font-family:Roboto" value="Roboto">Roboto</option>
+						<option style="font-family:Times New Roman" value="Times New Roman">Times New Roman</option>
+						<option style="font-family:Garamond" value="Garamond">Garamond</option>
+						<option style="font-family:Comic Sans MS" value="Comic Sans MS">Comic Sans MS</option>
+						<option style="font-family:Courier" value="Courier">Courier</option>
+						<option style="font-family:Impact" value="Impact">Impact</option>
+					</select>
+					<p>Font Size</p>
+						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2)">
+							<option>10pt</option>
+							<option>12pt</option>
+							<option>14pt</option>
+							<option>16pt</option>
+							<option>18pt</option>
+							<option>20pt</option>
+							<option>22pt</option>
+							<option>24pt</option>
+							<option>26pt</option>
+							<option>28pt</option>
+						</select>
+				</div>
+				<div id="background">
+					<p>Background</p>
+					<select id="backselect" name="selectBackground" onchange="backupdate();">
+						<option value="1"> Theme1 </option>
+						<option value="2"> Theme2</option>
+						<option value="3"> Theme3 </option>
+						<option value="4"> Theme4 </option>
+						<option value="5"> Theme5 </option>
+					</select>
+				</div>
+			</div>
+			<a href="javascript:void(0)" class="closebtn" onclick="closesetting()">&times;</a>
+		</div>
+
+		<main role="main">
+			<div id="sideNav">
+				<div class="nav-list-left">
+					<div id="sideLogo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
+					<a id="sideSetting" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
+					<div role="login">
+						<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
+					</div>
+					<a id="sideContact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
+				</div>
+				<div class="nav-list-right">
+					<div class="nav-list">
+						<a href="../notice/index.html" >NOTICE</a>
+					</div>
+					<div class="nav-list">
+						<a href="../members/index.html" >MEMBERS</a>
+					</div>
+					<div class="nav-list">
+						<a href="../research/index.html" >RESEARCH</a>
+					</div>
+					<div class="nav-list">
+						<a href="../publications/index.html" >PUBLICATIONS</a>
+					</div>
+					<div class="nav-list">
+						<a href="../courses/index.html" >COURSES</a>
+					</div>
+					<div class="nav-list">
+						<a href="../gallery/index.html" >GALLERY</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="main-container">
+
 				<div class="contents">
 					<h1>CONTACT</h1>
 					<div class="wrap">
