--- a/selab/login/index4e7d.html
+++ b/selab/login/index4e7d.html
@@ -4,29 +4,31 @@
 
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-	<link rel="stylesheet" type="text/css" href="style/login.css"/>
+	<link rel="stylesheet" type="text/css" href="style/log.css"/>
 	<script src="../common/scripts/jquery-1.10.2.js" type="text/javascript"></script>
 	<script src="script/login.js" type="text/javascript"></script>
+	<link href="https://fonts.googleapis.com/css?family=Megrim&display=swap" rel="stylesheet">
 	<title>Software Engineering Lab - Login</title>
 </head>
 <body>
-		<div id="wrap">
-		<header>
-			<h1>LOGIN</h1>
-		</header>
-		<content>
+	<div id="wrap">
+		<div class="login">
 			<form method="post" action="login.php">
 
 				<input id="idform" class="textfield" type="text" name="id" placeholder= "Username"/>
-				<div class="login_icon" id="usericon"></div>
 
 				<input class="textfield" type="password" name="password" placeholder = "Password"/>
-				<div class="login_icon" id="passwdicon"></div>
 
 				<input id="submit_button" type="submit" value="login"/>
 				<input type="hidden" name="source" value="/index.php">
 			</form>
-		</content>
+			<div class="join">
+				<input id="joinButton" type="button" value="join">
+			</div>
+		</div>
+		<div class="side">
+			<p>lab[se];</p>
+		</div>
 	</div>
 </body>
 </html>
