--- a/selab/login/join.html
+++ b/selab/login/join.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -12,19 +11,17 @@
 </head>
 <body>
 	<div id="wrap">
-		<div class="login">
-			<form method="post" action="login.php">
+		<div class="sign">
+			<form method="post" action="">
 
-				<input id="idform" class="textfield" type="text" name="id" placeholder= "Username"/>
+				<input id="identer" class="textfield" type="text" name="id" placeholder= "Username"/>
 
 				<input class="textfield" type="password" name="password" placeholder = "Password"/>
 
-				<input id="submit_button" type="submit" value="login"/>
+				<input id="num" class="textfield" type="text" name="students_number" placeholder= "students number"/>
+				<input id="submit_button" type="submit" value="sign in"/>
 				<input type="hidden" name="source" value="/index.php">
 			</form>
-			<div class="join">
-				<input id="joinButton" type="button" value="join" onClick="location.href='join.html'">
-			</div>
 		</div>
 		<div class="side">
 			<p>lab[se];</p>
