error fix and customize font size

--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -87,16 +87,11 @@
 					</select>
 					<p>Font Size</p>
 						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2)">
-							<option>10pt</option>
-							<option>12pt</option>
-							<option>14pt</option>
-							<option>16pt</option>
-							<option>18pt</option>
-							<option>20pt</option>
-							<option>22pt</option>
-							<option>24pt</option>
-							<option>26pt</option>
-							<option>28pt</option>
+							<option style="font-size: 15px">Small</option>
+							<option style="font-size: 20px" selected>Normal</option>
+							<option style="font-size: 25px">Medium</option>
+							<option style="font-size: 30px">Large</option>
+							<option style="font-size: 35px">Huge</option>
 						</select>
 				</div>
 				<div id="background">
