--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -41,7 +41,7 @@
 						<li><a href="../members/index.html" >MEMBERS</a></li>
 						<li><a href="../research/index.html" >RESEARCH</a></li>
 						<li><a href="../publications/index.html" >PUBLICATIONS</a></li>
-						<li><a href="../courses/index.html" >COURSES</a></li>
+						<li><a href="../courses/index.html" class="selected" >COURSES</a></li>
 						<li><a href="../gallery/index.html" >GALLERY</a></li>
 					</ul>
 				</div>
@@ -119,24 +119,12 @@
 					<a id="sideContact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 				</div>
 				<div class="nav-list-right">
-					<div class="nav-list">
-						<a href="../notice/index.html" >NOTICE</a>
-					</div>
-					<div class="nav-list">
-						<a href="../members/index.html" >MEMBERS</a>
-					</div>
-					<div class="nav-list">
-						<a href="../research/index.html" >RESEARCH</a>
-					</div>
-					<div class="nav-list">
-						<a href="../publications/index.html" >PUBLICATIONS</a>
-					</div>
-					<div class="nav-list">
-						<a href="../courses/index.html" >COURSES</a>
-					</div>
-					<div class="nav-list">
-						<a href="../gallery/index.html" >GALLERY</a>
-					</div>
+					<a href="../notice/index.html" >NOTICE</a>
+					<a href="../members/index.html" >MEMBERS</a>
+					<a href="../research/index.html" >RESEARCH</a>
+					<a href="../publications/index.html" >PUBLICATIONS</a>
+					<a href="../courses/index.html" class="selected" >COURSES</a>
+					<a href="../gallery/index.html" >GALLERY</a>
 				</div>
 			</div>
 
