--- a/selab/members/index.html
+++ b/selab/members/index.html
@@ -38,7 +38,7 @@
 			<div id="menu">
 				<ul class="inline-list pull-left">
 					<li><a href="../notice/index.html" >NOTICE</a></li>
-					<li><a href="../members/index.html" >MEMBERS</a></li>
+					<li><a href="../members/index.html" class="selected">MEMBERS</a></li>
 					<li><a href="../research/index.html" >RESEARCH</a></li>
 					<li><a href="../publications/index.html" >PUBLICATIONS</a></li>
 					<li><a href="../courses/index.html" >COURSES</a></li>
@@ -119,24 +119,12 @@
 				<a id="sideContact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 			</div>
 			<div class="nav-list-right">
-				<div class="nav-list">
-					<a href="../notice/index.html" >NOTICE</a>
-				</div>
-				<div class="nav-list">
-					<a href="../members/index.html" >MEMBERS</a>
-				</div>
-				<div class="nav-list">
-					<a href="../research/index.html" >RESEARCH</a>
-				</div>
-				<div class="nav-list">
-					<a href="../publications/index.html" >PUBLICATIONS</a>
-				</div>
-				<div class="nav-list">
-					<a href="../courses/index.html" >COURSES</a>
-				</div>
-				<div class="nav-list">
-					<a href="../gallery/index.html" >GALLERY</a>
-				</div>
+				<a href="../notice/index.html" >NOTICE</a>
+				<a href="../members/index.html" class="selected" >MEMBERS</a>
+				<a href="../research/index.html" >RESEARCH</a>
+				<a href="../publications/index.html" >PUBLICATIONS</a>
+				<a href="../courses/index.html" >COURSES</a>
+				<a href="../gallery/index.html" >GALLERY</a>
 			</div>
 		</div>
 
