--- a/selab/research/index.html
+++ b/selab/research/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
 	<script type="text/javascript" src="../common/scripts/common.js"></script>
 	<script type="text/javascript" src="script/research.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
@@ -40,7 +41,7 @@
 				<ul class="inline-list pull-left">
 					<li><a href="../notice/index.html" >NOTICE</a></li>
 					<li><a href="../members/index.html" >MEMBERS</a></li>
-					<li><a href="../research/index.html" >RESEARCH</a></li>
+					<li><a href="../research/index.html" class="selected" >RESEARCH</a></li>
 					<li><a href="../publications/index.html" >PUBLICATIONS</a></li>
 					<li><a href="../courses/index.html" >COURSES</a></li>
 					<li><a href="../gallery/index.html" >GALLERY</a></li>
@@ -120,24 +121,12 @@
 				<a id="sideContact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 			</div>
 			<div class="nav-list-right">
-				<div class="nav-list">
-					<a href="../notice/index.html" >NOTICE</a>
-				</div>
-				<div class="nav-list">
-					<a href="../members/index.html" >MEMBERS</a>
-				</div>
-				<div class="nav-list">
-					<a href="../research/index.html" >RESEARCH</a>
-				</div>
-				<div class="nav-list">
-					<a href="../publications/index.html" >PUBLICATIONS</a>
-				</div>
-				<div class="nav-list">
-					<a href="../courses/index.html" >COURSES</a>
-				</div>
-				<div class="nav-list">
-					<a href="../gallery/index.html" >GALLERY</a>
-				</div>
+				<a href="../notice/index.html" >NOTICE</a>
+				<a href="../members/index.html" >MEMBERS</a>
+				<a href="../research/index.html" class="selected" >RESEARCH</a>
+				<a href="../publications/index.html" >PUBLICATIONS</a>
+				<a href="../courses/index.html" >COURSES</a>
+				<a href="../gallery/index.html" >GALLERY</a>
 			</div>
 		</div>
 
