--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -74,7 +74,7 @@
 					<input type="radio" name="nav" value="left" /> Left
 					<input type="radio" name="nav" value="right" /> Right
 					<p>Font</p>
-					<select id="fontselect" name="selectFontFamily" onchange="fontupdate(1)">
+					<select id="fontselect" name="selectFontFamily" onchange="fontupdate('fontstyle')">
 						<option style="font-family:Serif" value="serif"> Serif </option>
 						<option style="font-family:Tahoma" value="Tahoma"> Tahoma </option>
 						<option style="font-family:Arial" value="Arial"> Arial </option>
@@ -87,7 +87,7 @@
 						<option style="font-family:Impact" value="Impact">Impact</option>
 					</select>
 					<p>Font Size</p>
-						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2)">
+						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeC')">
 							<option style="font-size: 15px">Small</option>
 							<option style="font-size: 20px" selected>Normal</option>
 							<option style="font-size: 25px">Medium</option>
