--- a/selab/members/index.html
+++ b/selab/members/index.html
@@ -87,7 +87,7 @@
 					<option style="font-family:Impact" value="Impact">Impact</option>
 				</select>
 				<p>Font Size</p>
-				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('members')">
+				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
 					<option style="font-size: 15px">Small</option>
 					<option style="font-size: 20px" selected>Normal</option>
 					<option style="font-size: 25px">Medium</option>
@@ -141,7 +141,7 @@
 							<div id="about">
 								<div id="info">
 									<ul>
-										<li class="name">Scott Uk-Jin Lee</li>
+										<li class="name" id="title">Scott Uk-Jin Lee</li>
 										<li>scottlee@hanyang.ac.kr</li>
 										<li><a href="https://selab.hanyang.ac.kr/members/TBA" target="_blank">TBA</a></li>
 										<li>an asst. prof. in the CSE Dept. @ HYU (ERICA)<br>leading this Laboratory!</li>
