--- a/selab/publications/index.html
+++ b/selab/publications/index.html
@@ -87,7 +87,7 @@
 					<option style="font-family:Impact" value="Impact">Impact</option>
 				</select>
 				<p>Font Size</p>
-				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('publication')">
+				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
 					<option style="font-size: 15px">Small</option>
 					<option style="font-size: 20px" selected>Normal</option>
 					<option style="font-size: 25px">Medium</option>
@@ -129,7 +129,7 @@
 		</div>
 
 		<div class="main-container">
-			<div class="contents" id="main">
+			<div class="contents">
 				<h1>PUBLICATIONS</h1>
 				<div id="tab">
 					<div class="first-tab" data-type="ALL">All</div>
@@ -138,7 +138,7 @@
 					<div class="deactive" data-type="DP">Domestic Conference</div>
 					<div class="deactive" data-type="DJ">Domestic Journal</div>
 				</div>
-				<div id="publications">
+				<div id="main">
 					<div id="hl"></div>
 					<table class="ALL">
 						<tbody>
