--- a/selab/research/index.html
+++ b/selab/research/index.html
@@ -89,7 +89,7 @@
 					<option style="font-family:Impact" value="Impact">Impact</option>
 				</select>
 				<p>Font Size</p>
-				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('research')">
+				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
 					<option style="font-size: 15px">Small</option>
 					<option style="font-size: 20px" selected>Normal</option>
 					<option style="font-size: 25px">Medium</option>
@@ -134,7 +134,7 @@
 			<div class="contents" id="main">
 				<h1>RESEARCH</h1>
 				<div id="tab">
-					<div class="first-tab" data-tab="research">Introduction</div>
+					<div class="first-tab" data-tab="research" id="title">Introduction</div>
 				</div>
 				<div id="hl"></div>
 				<div id="research" class="tabs">
