--- a/selab/gallery/index.html
+++ b/selab/gallery/index.html
@@ -88,7 +88,7 @@
 					<option style="font-family:Impact" value="Impact">Impact</option>
 				</select>
 				<p>Font Size</p>
-				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('gallery')">
+				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
 					<option style="font-size: 15px">Small</option>
 					<option style="font-size: 20px" selected>Normal</option>
 					<option style="font-size: 25px">Medium</option>
