--- a/selab/index.html
+++ b/selab/index.html
@@ -70,7 +70,7 @@
 					<option style="font-family:Impact" value="Impact">Impact</option>
 				</select>
 				<p>Font Size</p>
-				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('home')">
+				<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeC')">
 					<option style="font-size: 15px">Small</option>
 					<option style="font-size: 20px" selected>Normal</option>
 					<option style="font-size: 25px">Medium</option>
