--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -87,7 +87,7 @@
 						<option style="font-family:Impact" value="Impact">Impact</option>
 					</select>
 					<p>Font Size</p>
-						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeC')">
+						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
 							<option style="font-size: 15px">Small</option>
 							<option style="font-size: 20px" selected>Normal</option>
 							<option style="font-size: 25px">Medium</option>
@@ -129,7 +129,7 @@
 			</div>
 
 			<div class="main-container">
-				<div class="contents">
+				<div class="contents" id="main">
 					<h1>COURSES</h1>
 					<div id="course_table">
 						<table id="first_table">
