--- a/selab/index.html
+++ b/selab/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
-	<link rel="stylesheet" id = "backcss" href="home/styles/theme1.css" type="text/css" />
+	<link rel="stylesheet" id = "backcss" href="common/styles/theme1.css" type="text/css" />
 
 	<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
