--- a/selab/notice/index.html
+++ b/selab/notice/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="../common/styles/jquery-ui.css" type="text/css" />
 	<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
 	<link rel="stylesheet" href="../common/styles/common.css" type="text/css" />
+	<link rel="stylesheet" id = "backcss" href="../common/styles/theme1.css" type="text/css" />
 	<link rel="shortcut icon" href="../common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="styles/notice.css" type="text/css" />
 
