--- a/selab/index.html
+++ b/selab/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="common/images/color_lens-24px.svg" alt="customize"/> </a>
 			<div role="login" class="pull-right">
-				<a href="login/index4e7d.html?source=/index.php"> <img src="common/images/vpn_key-24px.svg" alt="login"> </a>
+				<a href="login/index4e7d.html"> <img src="common/images/vpn_key-24px.svg" alt="login"> </a>
 			</div>
 			<a id="contact" href="contact/index.html" class='pull-right'> <img src="common/images/phone-24px.svg" alt="contact"> </a>
 		</nav>
