--- a/selab/login/join.html
+++ b/selab/login/join.html
@@ -18,8 +18,8 @@
 
 				<input class="textfield" type="password" name="password" placeholder = "Password"/>
 
-				<input id="num" class="textfield" type="text" name="students_number" placeholder= "students number"/>
-				<input id="submit_button" type="submit" value="sign in"/>
+				<input id="num" class="textfield" type="text" name="class" placeholder= "class"/>
+				<input class="submit_button" type="submit" value="sign in"/>
 				<input type="hidden" name="source" value="/index.php">
 			</form>
 		</div>
