--- a/selab/login/join.html
+++ b/selab/login/join.html
@@ -12,15 +12,11 @@
 <body>
 	<div id="wrap">
 		<div class="sign">
-			<form method="post" action="">
-
-				<input id="identer" class="textfield" type="text" name="id" placeholder= "Username"/>
-
-				<input class="textfield" type="password" name="password" placeholder = "Password"/>
-
-				<input id="num" class="textfield" type="text" name="class" placeholder= "class"/>
+			<form method="post" action="join.php">
+				<input class="textfield" type="text" name="name" placeholder= "Name"/>
+				<input class="textfield" type="text" name="num" placeholder = "Student Number"/>
+				<input class="textfield" type="text" name="class" placeholder= "class"/>
 				<input class="submit_button" type="submit" value="sign in"/>
-				<input type="hidden" name="source" value="/index.php">
 			</form>
 		</div>
 		<div class="side">
