--- a/selab/gallery/index.html
+++ b/selab/gallery/index.html
@@ -19,12 +19,10 @@
 	<script type="text/javascript" src="../common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="../common/scripts/jquery-ui.js"></script>
 	<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
-	<script type="text/javascript" src="scripts/socialCircle.js"></script> 
-	<!-- 	<script type="text/javascript" src="../common/scripts/common.js"></script> -->
+	<script type="text/javascript" src="scripts/socialCircle.js"></script>
+	<script type="text/javascript" src="../common/scripts/common.js"></script>
 	<script type="text/javascript" src="scripts/gallery.js"></script>
 	<script type="text/javascript" src="scripts/lightbox-2.6.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="jssocials.css" />
-	<link rel="stylesheet" type="text/css" href="jssocials-theme-flat.css" />
 
 </head>
 
@@ -157,7 +155,7 @@
 		</div>
 
 		<div class="main-container">
-			<div class="contents" id='main'>
+			<div class="contents">
 				<h1>GALLERY</h1>
 				<div id="tab">
 					<div class="first-tab" data-type="all">All</div>
