--- a/selab/research/index.html
+++ b/selab/research/index.html
@@ -131,7 +131,7 @@
 			</div>
 		</div>
 
-		<div class="main-container container">
+		<div class="main-container">
 			<div class="contents" id="main">
 				<h1>RESEARCH</h1>
 				<div id="tab">
