--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -74,7 +74,7 @@
 					<input type="radio" name="nav" value="left" /> Left
 					<input type="radio" name="nav" value="right" /> Right
 					<p>Font</p>
-					<select id="fontselect" name="selectFontFamily" onchange="fontupdate(1)">
+					<select id="fontselect" name="selectFontFamily" onchange="fontupdate('fontstyle')">
 						<option style="font-family:Serif" value="serif"> Serif </option>
 						<option style="font-family:Tahoma" value="Tahoma"> Tahoma </option>
 						<option style="font-family:Arial" value="Arial"> Arial </option>
@@ -87,18 +87,13 @@
 						<option style="font-family:Impact" value="Impact">Impact</option>
 					</select>
 					<p>Font Size</p>
-						<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2)">
-							<option>10pt</option>
-							<option>12pt</option>
-							<option>14pt</option>
-							<option>16pt</option>
-							<option>18pt</option>
-							<option>20pt</option>
-							<option>22pt</option>
-							<option>24pt</option>
-							<option>26pt</option>
-							<option>28pt</option>
-						</select>
+					<select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate('sizeTC')">
+						<option style="font-size: 15px">Small</option>
+						<option style="font-size: 20px" selected>Normal</option>
+						<option style="font-size: 25px">Medium</option>
+						<option style="font-size: 30px">Large</option>
+						<option style="font-size: 35px">Huge</option>
+					</select>
 				</div>
 				<div id="background">
 					<p>Background</p>
@@ -135,7 +130,7 @@
 
 			<div class="main-container">
 
-				<div class="contents">
+				<div class="contents" id="main">
 					<h1>CONTACT</h1>
 					<div class="wrap">
 						<h2>Address</h2>
