Add intial value when join.

--- a/selab/login/index4e7d.html
+++ b/selab/login/index4e7d.html
@@ -20,7 +20,7 @@
 
 		<div id="student">
 			<form method="post" action="login.php">
-				<input class="idform" type="text" name="id" placeholder= "Username"/>
+				<input class="idform" type="text" name="id" placeholder= "Student Number"/>
 				<input class="textfield" type="password" name="password" placeholder = "Password"/>
 				<input class="submit_button" type="submit" value="login"/>
 				<input type="hidden" name="source" value="/index.php">
